--- a/StockPrediction.ipynb
+++ b/StockPrediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5iS08zdohmlObnJaoJUwL",
+      "authorship_tag": "ABX9TyMIQ94tZM8e8+pmFYFyNIxM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -440,9 +440,100 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# builds the LSTM model\n",
+        "model = Sequential()\n",
+        "model.add(LSTM(units=50, return_sequences=True,\n",
+        "                    input_shape=(look_back, 1)))\n",
+        "model.add(LSTM(units=100,return_sequences = True))\n",
+        "model.add(LSTM(units=100))\n",
+        "model.add(Dense(1))"
+      ],
       "metadata": {
         "id": "BzE5qz6cLqqa"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# compiles the model\n",
+        "model.compile(optimizer='adam', loss='mean_squared_error', metrics = ['accuracy'])\n",
+        "model.fit(train_generator, epochs=20)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I4GqSzu1OFWN",
+        "outputId": "c27567ce-cfdf-4de7-abee-0f63660624a5"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/20\n",
+            "17/17 [==============================] - 8s 66ms/step - loss: 0.9844\n",
+            "Epoch 2/20\n",
+            "17/17 [==============================] - 1s 66ms/step - loss: 0.4773\n",
+            "Epoch 3/20\n",
+            "17/17 [==============================] - 1s 68ms/step - loss: 0.3555\n",
+            "Epoch 4/20\n",
+            "17/17 [==============================] - 1s 65ms/step - loss: 0.2965\n",
+            "Epoch 5/20\n",
+            "17/17 [==============================] - 1s 66ms/step - loss: 0.2639\n",
+            "Epoch 6/20\n",
+            "17/17 [==============================] - 1s 66ms/step - loss: 0.2478\n",
+            "Epoch 7/20\n",
+            "17/17 [==============================] - 1s 66ms/step - loss: 0.2444\n",
+            "Epoch 8/20\n",
+            "17/17 [==============================] - 1s 83ms/step - loss: 0.2379\n",
+            "Epoch 9/20\n",
+            "17/17 [==============================] - 2s 105ms/step - loss: 0.2431\n",
+            "Epoch 10/20\n",
+            "17/17 [==============================] - 2s 101ms/step - loss: 0.2230\n",
+            "Epoch 11/20\n",
+            "17/17 [==============================] - 1s 67ms/step - loss: 0.2026\n",
+            "Epoch 12/20\n",
+            "17/17 [==============================] - 1s 67ms/step - loss: 0.1964\n",
+            "Epoch 13/20\n",
+            "17/17 [==============================] - 1s 66ms/step - loss: 0.1789\n",
+            "Epoch 14/20\n",
+            "17/17 [==============================] - 1s 65ms/step - loss: 0.1749\n",
+            "Epoch 15/20\n",
+            "17/17 [==============================] - 1s 67ms/step - loss: 0.1641\n",
+            "Epoch 16/20\n",
+            "17/17 [==============================] - 1s 65ms/step - loss: 0.1541\n",
+            "Epoch 17/20\n",
+            "17/17 [==============================] - 1s 66ms/step - loss: 0.1495\n",
+            "Epoch 18/20\n",
+            "17/17 [==============================] - 1s 67ms/step - loss: 0.1516\n",
+            "Epoch 19/20\n",
+            "17/17 [==============================] - 2s 93ms/step - loss: 0.1549\n",
+            "Epoch 20/20\n",
+            "17/17 [==============================] - 2s 99ms/step - loss: 0.1573\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.src.callbacks.History at 0x7b59722cdf30>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QMb6s5hpOQWQ"
       },
       "execution_count": null,
       "outputs": []
